--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "bluebird": "^3.5.5",
-    "eosjs": "20"
+    "eosjs": "20",
+    "node-fetch": "^2.6.0"
   }
 }
